--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "c8eb2e27",
    "metadata": {},
    "outputs": [
@@ -18,32 +18,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python : 3.10.12 (main, Aug 15 2025, 14:32:43) [GCC 11.4.0]\n",
+      "Python : 3.10.19 | packaged by conda-forge | (main, Oct 22 2025, 22:29:10) [GCC 14.3.0]\n",
       "CUDA   : 12.1\n",
       "Torch  : 2.3.1+cu121\n",
-      "Device : NVIDIA GeForce RTX 3070\n",
-      "Thu Nov  6 16:59:52 2025       \n",
+      "Device : NVIDIA GeForce RTX 4090\n",
+      "Fri Nov  7 15:22:39 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 580.95.05              Driver Version: 580.95.05      CUDA Version: 13.0     |\n",
-      "+-----------------------------------------+------------------------+----------------------+\n",
+      "| NVIDIA-SMI 550.144.03             Driver Version: 550.144.03     CUDA Version: 12.4     |\n",
+      "|-----------------------------------------+------------------------+----------------------+\n",
       "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
       "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
-      "|   0  NVIDIA GeForce RTX 3070        Off |   00000000:09:00.0  On |                  N/A |\n",
-      "|  0%   50C    P8             17W /  270W |     701MiB /   8192MiB |     19%      Default |\n",
+      "|   0  NVIDIA GeForce RTX 4090        Off |   00000000:01:00.0 Off |                  Off |\n",
+      "|  0%   46C    P8             19W /  450W |    4062MiB /  24564MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
-      "\n",
+      "                                                                                         \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| Processes:                                                                              |\n",
-      "|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
       "|        ID   ID                                                               Usage      |\n",
       "|=========================================================================================|\n",
-      "|    0   N/A  N/A          128557      G   /usr/lib/xorg/Xorg                      349MiB |\n",
-      "|    0   N/A  N/A          128696      G   /usr/bin/gnome-shell                     38MiB |\n",
-      "|    0   N/A  N/A          129847      G   ...ersion=20251028-170038.499000         51MiB |\n",
-      "|    0   N/A  N/A          179654      G   /usr/share/code/code                    187MiB |\n",
+      "|    0   N/A  N/A      5133      G   /usr/lib/xorg/Xorg                             73MiB |\n",
+      "|    0   N/A  N/A      5381      G   /usr/bin/gnome-shell                           63MiB |\n",
+      "|    0   N/A  N/A    117344      C   ...nda3/envs/Multimodal_hw2/bin/python       3908MiB |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
@@ -60,10 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "dab32194",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abat/conda_envs/clip/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# some imports\n",
     "import torch\n",
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "2d0a8323",
    "metadata": {},
    "outputs": [
@@ -111,10 +119,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "53344f36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abat/conda_envs/clip/lib/python3.10/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# CLIP settings\n",
     "# --- Load CLIP Processor ---\n",
@@ -135,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6365bb24",
    "metadata": {},
    "outputs": [
@@ -143,9 +160,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total test samples: 6149\n",
-      "102\n",
+      "Downloading https://thor.robots.ox.ac.uk/flowers/102/102flowers.tgz to data/flowers-102/102flowers.tgz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 344862509/344862509 [00:35<00:00, 9704779.01it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting data/flowers-102/102flowers.tgz to data/flowers-102\n",
+      "Downloading https://thor.robots.ox.ac.uk/flowers/102/imagelabels.mat to data/flowers-102/imagelabels.mat\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 502/502 [00:00<00:00, 380542.31it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://thor.robots.ox.ac.uk/flowers/102/setid.mat to data/flowers-102/setid.mat\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 14989/14989 [00:00<00:00, 7317940.01it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total test samples: 6149\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating train split: 100%|██████████| 5994/5994 [00:06<00:00, 996.13 examples/s] \n",
+      "Generating test split: 100%|██████████| 5794/5794 [00:05<00:00, 1030.08 examples/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Total test samples: 5794\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -198,6 +278,7 @@
     "# === 3. Evaluate on the test set ===\n",
     "with torch.no_grad():\n",
     "    for epoch, batch in enumerate(tqdm(flowers102_test_loader, desc=\"Zero-Shot Evaluation\"), 1):\n",
+    "        \n",
     "        pass\n",
     "\n",
     "with torch.no_grad():\n",
@@ -219,7 +300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "clip",
    "language": "python",
    "name": "python3"
   },
@@ -233,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
