--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -22,7 +22,7 @@
       "CUDA   : 12.1\n",
       "Torch  : 2.3.1+cu121\n",
       "Device : NVIDIA GeForce RTX 3080\n",
-      "Sun Nov  9 19:19:38 2025       \n",
+      "Sun Nov  9 20:04:28 2025       \n",
       "+---------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 535.183.06             Driver Version: 535.183.06   CUDA Version: 12.2     |\n",
       "|-----------------------------------------+----------------------+----------------------+\n",
@@ -31,7 +31,7 @@
       "|                                         |                      |               MIG M. |\n",
       "|=========================================+======================+======================|\n",
       "|   0  NVIDIA GeForce RTX 3080        On  | 00000000:01:00.0 Off |                  N/A |\n",
-      "|  0%   50C    P8              24W / 320W |     25MiB / 10240MiB |      0%      Default |\n",
+      "|  0%   48C    P8              22W / 320W |     25MiB / 10240MiB |      0%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "                                                                                         \n",
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6365bb24",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "54a3b47f",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "18e8d754",
    "metadata": {},
    "outputs": [],
@@ -332,58 +332,61 @@
     "]\n",
     "\n",
     "@torch.no_grad()\n",
-    "def encode_text_prompts(class_names):\n",
-    "    \"\"\"對每個類別以多個模板取平均，得到 (C, D) 的 normalized 文字特徵\"\"\"\n",
-    "    all_feats = []\n",
-    "    for cname in class_names:\n",
-    "        texts = [t.format(cname) for t in prompt_templates]\n",
-    "        inputs = processor(text=texts, return_tensors=\"pt\", padding=True).to(DEVICE)\n",
-    "        feats  = model.get_text_features(**inputs)            # (T, D)\n",
-    "        feats  = feats / feats.norm(dim=-1, keepdim=True)\n",
-    "        cls    = feats.mean(dim=0)\n",
-    "        cls    = cls / cls.norm()\n",
-    "        all_feats.append(cls)\n",
-    "    return torch.stack(all_feats, dim=0)                      # (C, D)\n",
-    "\n",
-    "flowers_text_features = encode_text_prompts(flowers102_class_names)\n",
-    "cub_text_features     = encode_text_prompts(cub_bird_class_names)\n",
-    "\n",
-    "@torch.no_grad()\n",
-    "def zeroshot_eval(dataloader, text_features):\n",
-    "    \"\"\"支援兩種 batch 介面：\n",
-    "       - torchvision: (images, labels)\n",
-    "       - HF: {\"pixel_values\": images, \"label\": labels}\n",
+    "def zeroshot_eval_all_prompts(dataloader, class_names, templates):\n",
     "    \"\"\"\n",
-    "    correct = total = 0\n",
-    "    for batch in tqdm(dataloader, desc=\"Zero-Shot Evaluation\"):\n",
+    "    一次建立全部 prompt 的文字特徵，對每張圖片同時計算 6 種 prompt 的預測。\n",
+    "    回傳: list[float]，每個模板的準確率\n",
+    "    \"\"\"\n",
+    "    T = len(templates)\n",
+    "    C = len(class_names)\n",
+    "\n",
+    "    # 1. 一次建立全部文字特徵 (T, C, D)\n",
+    "    text_features_all = []\n",
+    "    for tpl in templates:\n",
+    "        texts = [tpl.format(c) for c in class_names]\n",
+    "        inputs = processor(text=texts, return_tensors=\"pt\", padding=True).to(DEVICE)\n",
+    "        feats = model.get_text_features(**inputs)\n",
+    "        feats = feats / feats.norm(dim=-1, keepdim=True)\n",
+    "        text_features_all.append(feats)\n",
+    "    text_features_all = torch.stack(text_features_all, dim=0)  # (T, C, D)\n",
+    "\n",
+    "    # 初始化統計\n",
+    "    correct_per_prompt = torch.zeros(T, device=\"cpu\")\n",
+    "    total_samples = 0\n",
+    "\n",
+    "    # 2. 評估\n",
+    "    for batch in tqdm(dataloader, desc=\"Zero-Shot (6 prompts together)\"):\n",
     "        if isinstance(batch, dict):\n",
     "            images, labels = batch[\"pixel_values\"], batch[\"label\"]\n",
     "        else:\n",
     "            images, labels = batch\n",
     "        if isinstance(images, list):\n",
     "            images = torch.stack(images, dim=0)\n",
-    "\n",
-    "        # 最終防呆：若還有 HWC 的 batch，轉回 CHW\n",
     "        if images.ndim == 4 and images.shape[1] != 3 and images.shape[-1] == 3:\n",
     "            images = images.permute(0, 3, 1, 2)\n",
     "\n",
     "        images = images.to(DEVICE, non_blocking=True)\n",
     "        labels = labels.to(DEVICE, non_blocking=True)\n",
+    "        B = images.size(0)\n",
     "\n",
-    "        img_feats = model.get_image_features(pixel_values=images)   # (B, D)\n",
-    "        img_feats = img_feats / img_feats.norm(dim=-1, keepdim=True)\n",
+    "        # encode image only once\n",
+    "        img_feats = model.get_image_features(pixel_values=images)\n",
+    "        img_feats = img_feats / img_feats.norm(dim=-1, keepdim=True)  # (B, D)\n",
     "\n",
-    "        logits = 100.0 * img_feats @ text_features.T               # (B, C)\n",
-    "        preds  = logits.argmax(dim=-1)\n",
+    "        # 3. 對每個 prompt 的文字特徵各自計算相似度\n",
+    "        for t in range(T):\n",
+    "            logits = 100.0 * img_feats @ text_features_all[t].T  # (B, C)\n",
+    "            preds  = logits.argmax(dim=-1)\n",
+    "            correct_per_prompt[t] += (preds == labels).sum().cpu()\n",
+    "        total_samples += B\n",
     "\n",
-    "        correct += (preds == labels).sum().item()\n",
-    "        total   += labels.numel()\n",
-    "    return correct / max(total, 1)\n"
+    "    accs = (correct_per_prompt / total_samples).tolist()\n",
+    "    return accs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9f0bf5e8",
    "metadata": {},
    "outputs": [
@@ -398,39 +401,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Zero-Shot Evaluation: 100%|██████████| 97/97 [01:12<00:00,  1.33it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Flowers102] Zero-Shot Test Accuracy: 74.19%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Zero-Shot (6 prompts together):  24%|██▎       | 23/97 [00:17<00:55,  1.33it/s]"
      ]
     }
    ],
    "source": [
     "print(\"--- Starting Method 1: Zero-Shot Classification ---\")\n",
     "\n",
-    "with torch.no_grad():\n",
-    "    flowers102_accuracy = zeroshot_eval(flowers102_test_loader, flowers_text_features)\n",
+    "flowers_acc_list = zeroshot_eval_all_prompts(flowers102_test_loader, flowers102_class_names, prompt_templates)\n",
     "\n",
-    "\n",
-    "print(f\"\\n[Flowers102] Zero-Shot Test Accuracy: {flowers102_accuracy * 100:.2f}%\")\n",
+    "for temp, val in (prompt_templates, flowers_acc_list):\n",
+    "    print(f\"\\n[Flowers102] Template:{temp} Accuracy:{val * 100:.2f}%\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ecceb02b",
    "metadata": {},
    "outputs": [
@@ -450,16 +437,16 @@
     }
    ],
    "source": [
-    "with torch.no_grad():\n",
-    "    cub_bird_accuracy   = zeroshot_eval(cub_bird_test_loader,   cub_text_features)\n",
+    "cub_acc_list     = zeroshot_eval_all_prompts(cub_bird_test_loader,     cub_bird_class_names,   prompt_templates)\n",
     "\n",
-    "print(f\"[CUB-200-2011] Zero-Shot Test Accuracy: {cub_bird_accuracy * 100:.2f}%\")\n",
+    "for temp, val in (prompt_templates, cub_acc_list):\n",
+    "    print(f\"\\n[Flowers102] Template:{temp} Accuracy:{val * 100:.2f}%\")\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7a0a71dc",
    "metadata": {},
    "outputs": [
