Add prompt, zip two list in for

--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "18e8d754",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,8 @@
     "    \"photo of {}.\",\n",
     "    \"an image of a {}.\",\n",
     "    \"an image of {}.\",\n",
-    "    \"image of {}.\"\n",
+    "    \"image of {}.\",\n",
+    "    \"represent {}\"\n",
     "]\n",
     "\n",
     "@torch.no_grad()\n",
@@ -401,23 +402,49 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Zero-Shot (6 prompts together):  24%|██▎       | 23/97 [00:17<00:55,  1.33it/s]"
+      "Zero-Shot (6 prompts together):  16%|█▋        | 16/97 [00:12<01:00,  1.34it/s]"
      ]
     }
    ],
    "source": [
     "print(\"--- Starting Method 1: Zero-Shot Classification ---\")\n",
     "\n",
-    "flowers_acc_list = zeroshot_eval_all_prompts(flowers102_test_loader, flowers102_class_names, prompt_templates)\n",
-    "\n",
-    "for temp, val in (prompt_templates, flowers_acc_list):\n",
-    "    print(f\"\\n[Flowers102] Template:{temp} Accuracy:{val * 100:.2f}%\")\n",
-    "\n"
+    "flowers_acc_list = zeroshot_eval_all_prompts(flowers102_test_loader, flowers102_class_names, prompt_templates)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "b6bb12c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[Flowers102] Template:a photo of a {}. Accuracy:74.91%\n",
+      "\n",
+      "[Flowers102] Template:a photo of {}. Accuracy:72.87%\n",
+      "\n",
+      "[Flowers102] Template:photo of {}. Accuracy:72.53%\n",
+      "\n",
+      "[Flowers102] Template:an image of a {}. Accuracy:75.15%\n",
+      "\n",
+      "[Flowers102] Template:an image of {}. Accuracy:73.87%\n",
+      "\n",
+      "[Flowers102] Template:image of {}. Accuracy:72.84%\n"
+     ]
+    }
+   ],
+   "source": [
+    "for temp, val in zip(prompt_templates, flowers_acc_list):\n",
+    "    print(f\"\\n[Flowers102] Template:{temp} Accuracy:{val * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "ecceb02b",
    "metadata": {},
    "outputs": [
@@ -425,23 +452,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Zero-Shot Evaluation: 100%|██████████| 91/91 [00:10<00:00,  8.86it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CUB-200-2011] Zero-Shot Test Accuracy: 26.37%\n"
+      "Zero-Shot (6 prompts together): 100%|██████████| 91/91 [00:10<00:00,  8.90it/s]\n"
      ]
     }
    ],
    "source": [
     "cub_acc_list     = zeroshot_eval_all_prompts(cub_bird_test_loader,     cub_bird_class_names,   prompt_templates)\n",
     "\n",
-    "for temp, val in (prompt_templates, cub_acc_list):\n",
-    "    print(f\"\\n[Flowers102] Template:{temp} Accuracy:{val * 100:.2f}%\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "449a227c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[Birds200] Template:a photo of a {}. Accuracy:26.74%\n",
+      "\n",
+      "[Birds200] Template:a photo of {}. Accuracy:26.74%\n",
+      "\n",
+      "[Birds200] Template:photo of {}. Accuracy:25.27%\n",
+      "\n",
+      "[Birds200] Template:an image of a {}. Accuracy:24.54%\n",
+      "\n",
+      "[Birds200] Template:an image of {}. Accuracy:28.94%\n",
+      "\n",
+      "[Birds200] Template:image of {}. Accuracy:26.01%\n"
+     ]
+    }
+   ],
+   "source": [
+    "for temp, val in zip(prompt_templates, cub_acc_list):\n",
+    "    print(f\"\\n[Birds200] Template:{temp} Accuracy:{val * 100:.2f}%\")"
    ]
   },
   {
