--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "id": "c8eb2e27",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
       "CUDA   : 12.1\n",
       "Torch  : 2.3.1+cu121\n",
       "Device : NVIDIA GeForce RTX 4090\n",
-      "Sun Nov  9 21:11:14 2025       \n",
+      "Mon Nov 10 16:02:46 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 550.144.03             Driver Version: 550.144.03     CUDA Version: 12.4     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -31,7 +31,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 4090        Off |   00000000:01:00.0 Off |                  Off |\n",
-      "|  0%   50C    P2             56W /  450W |   18952MiB /  24564MiB |      0%      Default |\n",
+      "| 32%   62C    P2            304W /  450W |   14307MiB /  24564MiB |     95%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -42,8 +42,7 @@
       "|=========================================================================================|\n",
       "|    0   N/A  N/A      5133      G   /usr/lib/xorg/Xorg                             74MiB |\n",
       "|    0   N/A  N/A      5381      G   /usr/bin/gnome-shell                           63MiB |\n",
-      "|    0   N/A  N/A   2667085      C   ...nda3/envs/Multimodal_hw2/bin/python       9264MiB |\n",
-      "|    0   N/A  N/A   2726352      C   /home/abat/conda_envs/clip/bin/python        9526MiB |\n",
+      "|    0   N/A  N/A   4044186      C   python3                                     14152MiB |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
@@ -60,10 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "id": "dab32194",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abat/conda_envs/clip/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# some imports\n",
     "import torch\n",
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "id": "2d0a8323",
    "metadata": {},
    "outputs": [
@@ -166,7 +174,7 @@
        ")"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 4,
    "id": "6365bb24",
    "metadata": {},
    "outputs": [
@@ -238,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 5,
    "id": "54a3b47f",
    "metadata": {},
    "outputs": [
@@ -307,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 6,
    "id": "18e8d754",
    "metadata": {},
    "outputs": [],
@@ -381,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 7,
    "id": "9f0bf5e8",
    "metadata": {},
    "outputs": [
@@ -396,7 +404,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Zero-Shot (6 prompts together): 100%|██████████| 97/97 [00:30<00:00,  3.18it/s]\n"
+      "Zero-Shot (6 prompts together): 100%|██████████| 97/97 [01:02<00:00,  1.55it/s]\n"
      ]
     }
    ],
@@ -408,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 8,
    "id": "b6bb12c0",
    "metadata": {},
    "outputs": [
@@ -442,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 9,
    "id": "ecceb02b",
    "metadata": {},
    "outputs": [
@@ -450,7 +458,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Zero-Shot (6 prompts together): 100%|██████████| 91/91 [00:09<00:00,  9.62it/s]\n"
+      "Zero-Shot (6 prompts together): 100%|██████████| 91/91 [00:10<00:00,  8.89it/s]\n"
      ]
     }
    ],
@@ -462,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 10,
    "id": "449a227c",
    "metadata": {},
    "outputs": [
@@ -496,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "id": "7a0a71dc",
    "metadata": {},
    "outputs": [],
@@ -601,7 +609,7 @@
     "\n",
     "    # ------- 畫圖（固定 rows×cols） -------\n",
     "    rows = int((len(indices) + cols - 1) // cols)\n",
-    "    fig, axes = plt.subplots(rows, cols, figsize=(4 * cols, 4 * rows))\n",
+    "    fig, axes = plt.subplots(rows, cols, figsize=(3.6 * cols, 3.6 * rows), constrained_layout=True)\n",
     "    axes = axes.flatten()\n",
     "\n",
     "    for i, idx in enumerate(indices):\n",
@@ -645,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 12,
    "id": "db1ddec5",
    "metadata": {},
    "outputs": [
@@ -675,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 13,
    "id": "53ab0ca2",
    "metadata": {},
    "outputs": [
