--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -22,7 +22,7 @@
       "CUDA   : 12.1\n",
       "Torch  : 2.3.1+cu121\n",
       "Device : NVIDIA GeForce RTX 4090\n",
-      "Mon Nov 10 21:10:33 2025       \n",
+      "Mon Nov 10 21:33:19 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 550.144.03             Driver Version: 550.144.03     CUDA Version: 12.4     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -31,7 +31,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 4090        Off |   00000000:01:00.0 Off |                  Off |\n",
-      "|  0%   45C    P8             20W /  450W |     151MiB /  24564MiB |      0%      Default |\n",
+      "|  0%   47C    P8             20W /  450W |     151MiB /  24564MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -43,7 +43,7 @@
       "|    0   N/A  N/A      5133      G   /usr/lib/xorg/Xorg                             74MiB |\n",
       "|    0   N/A  N/A      5381      G   /usr/bin/gnome-shell                           63MiB |\n",
       "+-----------------------------------------------------------------------------------------+\n",
-      "Mon Nov 10 21:10:33 2025       \n",
+      "Mon Nov 10 21:33:19 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 550.144.03             Driver Version: 550.144.03     CUDA Version: 12.4     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -52,7 +52,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 4090        Off |   00000000:01:00.0 Off |                  Off |\n",
-      "|  0%   45C    P8             20W /  450W |     151MiB /  24564MiB |      0%      Default |\n",
+      "|  0%   47C    P8             20W /  450W |     151MiB /  24564MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "54a3b47f",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
     "    cub_bird_test_dts,\n",
     "    batch_size=BATCH_SIZE,\n",
     "    shuffle=False,\n",
-    "    num_workers=0,\n",
+    "    num_workers=NUM_WORKERS,\n",
     "    pin_memory=True,\n",
     "    collate_fn=hf_collate_fn\n",
     ")\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "18e8d754",
    "metadata": {},
    "outputs": [],
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "9f0bf5e8",
    "metadata": {},
    "outputs": [
@@ -488,8 +488,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Zero-Shot (8 prompts together): 100%|██████████| 97/97 [00:30<00:00,  3.19it/s]\n",
-      "Zero-Shot (8 prompts together): 100%|██████████| 97/97 [00:30<00:00,  3.19it/s]\n"
+      "Zero-Shot (8 prompts together): 100%|██████████| 97/97 [00:30<00:00,  3.16it/s]\n",
+      "Zero-Shot (8 prompts together): 100%|██████████| 97/97 [00:30<00:00,  3.16it/s]\n"
      ]
     }
    ],
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "4c369361",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "ecceb02b",
    "metadata": {},
    "outputs": [
@@ -555,8 +555,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Zero-Shot (8 prompts together): 100%|██████████| 91/91 [00:46<00:00,  1.96it/s]\n",
-      "Zero-Shot (8 prompts together): 100%|██████████| 91/91 [00:46<00:00,  1.96it/s]\n"
+      "Zero-Shot (8 prompts together): 100%|██████████| 91/91 [00:28<00:00,  3.15it/s]\n",
+      "Zero-Shot (8 prompts together): 100%|██████████| 91/91 [00:28<00:00,  3.15it/s]\n"
      ]
     }
    ],
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "449a227c",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "7a0a71dc",
    "metadata": {},
    "outputs": [],
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "db1ddec5",
    "metadata": {},
    "outputs": [
@@ -765,7 +765,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_155807/1054759640.py:137: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
+      "/tmp/ipykernel_173744/1054759640.py:137: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
       "  fig.subplots_adjust(wspace=0.8, hspace=0.05)\n"
      ]
     },
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "53ab0ca2",
    "metadata": {},
    "outputs": [
@@ -803,7 +803,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_155807/1054759640.py:137: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
+      "/tmp/ipykernel_173744/1054759640.py:137: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
       "  fig.subplots_adjust(wspace=0.8, hspace=0.05)\n"
      ]
     },
