Clean task1 import

--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -22,7 +22,7 @@
       "CUDA   : 12.1\n",
       "Torch  : 2.3.1+cu121\n",
       "Device : NVIDIA GeForce RTX 4090\n",
-      "Mon Nov 10 21:33:19 2025       \n",
+      "Tue Nov 11 02:16:50 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 550.144.03             Driver Version: 550.144.03     CUDA Version: 12.4     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -31,7 +31,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 4090        Off |   00000000:01:00.0 Off |                  Off |\n",
-      "|  0%   47C    P8             20W /  450W |     151MiB /  24564MiB |      0%      Default |\n",
+      "|  0%   47C    P8             20W /  450W |   12345MiB /  24564MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -42,27 +42,7 @@
       "|=========================================================================================|\n",
       "|    0   N/A  N/A      5133      G   /usr/lib/xorg/Xorg                             74MiB |\n",
       "|    0   N/A  N/A      5381      G   /usr/bin/gnome-shell                           63MiB |\n",
-      "+-----------------------------------------------------------------------------------------+\n",
-      "Mon Nov 10 21:33:19 2025       \n",
-      "+-----------------------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 550.144.03             Driver Version: 550.144.03     CUDA Version: 12.4     |\n",
-      "|-----------------------------------------+------------------------+----------------------+\n",
-      "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                                         |                        |               MIG M. |\n",
-      "|=========================================+========================+======================|\n",
-      "|   0  NVIDIA GeForce RTX 4090        Off |   00000000:01:00.0 Off |                  Off |\n",
-      "|  0%   47C    P8             20W /  450W |     151MiB /  24564MiB |      0%      Default |\n",
-      "|                                         |                        |                  N/A |\n",
-      "+-----------------------------------------+------------------------+----------------------+\n",
-      "                                                                                         \n",
-      "+-----------------------------------------------------------------------------------------+\n",
-      "| Processes:                                                                              |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-      "|        ID   ID                                                               Usage      |\n",
-      "|=========================================================================================|\n",
-      "|    0   N/A  N/A      5133      G   /usr/lib/xorg/Xorg                             74MiB |\n",
-      "|    0   N/A  N/A      5381      G   /usr/bin/gnome-shell                           63MiB |\n",
+      "|    0   N/A  N/A    281992      C   ...nda3/envs/Multimodal_hw2/bin/python      12188MiB |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
@@ -96,21 +76,23 @@
     "# some imports\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torch.utils.data import DataLoader, random_split\n",
-    "from transformers import CLIPProcessor, CLIPModel, AutoProcessor, CLIPVisionModel, logging\n",
-    "import clip\n",
-    "from peft import LoraConfig, get_peft_model, TaskType\n",
+    "from torch.utils.data import DataLoader\n",
+    "from transformers import CLIPProcessor, CLIPModel\n",
     "from torchinfo import summary\n",
     "from tqdm.autonotebook import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import json\n",
-    "import warnings\n",
     "import torch.nn.functional as F\n",
     "from PIL import Image\n",
-    "import os"
+    "import os\n",
+    "from datasets import load_dataset\n",
+    "import io\n",
+    "from torchvision.datasets import Flowers102\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from typing import List, Optional\n",
+    "from tabulate import tabulate\n"
    ]
   },
   {
@@ -236,8 +218,6 @@
    ],
    "source": [
     "# ==== Flowers102 (torchvision) ====\n",
-    "from torchvision.datasets import Flowers102\n",
-    "from torch.utils.data import DataLoader\n",
     "\n",
     "# 把 PIL 影像轉成 (3,224,224) 的 CLIP 規格 tensor\n",
     "def clip_image_transform(image):\n",
@@ -295,8 +275,7 @@
    ],
    "source": [
     "# ==== CUB-200-2011 (HF datasets) ====\n",
-    "from datasets import load_dataset\n",
-    "import io\n",
+    "\n",
     "\n",
     "birds_200 = load_dataset(\"bentrevett/caltech-ucsd-birds-200-2011\", cache_dir=\"./data\")\n",
     "cub_bird_test_raw = birds_200[\"test\"]\n",
@@ -488,7 +467,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Zero-Shot (8 prompts together): 100%|██████████| 97/97 [00:30<00:00,  3.16it/s]\n",
       "Zero-Shot (8 prompts together): 100%|██████████| 97/97 [00:30<00:00,  3.16it/s]\n"
      ]
     }
@@ -524,7 +502,7 @@
    ],
    "source": [
     "# === Summary Table: per-prompt accuracy ===\n",
-    "from tabulate import tabulate\n",
+    "\n",
     "\n",
     "# 確保 flowers_acc_list 和 cub_acc_list 都是 list[float]\n",
     "assert len(flowers_acc_list) == len(prompt_templates)\n",
@@ -555,7 +533,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Zero-Shot (8 prompts together): 100%|██████████| 91/91 [00:28<00:00,  3.15it/s]\n",
       "Zero-Shot (8 prompts together): 100%|██████████| 91/91 [00:28<00:00,  3.15it/s]\n"
      ]
     }
@@ -613,10 +590,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn.functional as F\n",
-    "import matplotlib.pyplot as plt\n",
-    "from typing import List, Optional\n",
     "\n",
     "@torch.no_grad()\n",
     "def visualize_multi_prompt_compact_indices(\n",
@@ -765,7 +738,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_173744/1054759640.py:137: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
+      "/tmp/ipykernel_425152/2419210879.py:132: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
       "  fig.subplots_adjust(wspace=0.8, hspace=0.05)\n"
      ]
     },
@@ -803,7 +776,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_173744/1054759640.py:137: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
+      "/tmp/ipykernel_425152/2419210879.py:132: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
       "  fig.subplots_adjust(wspace=0.8, hspace=0.05)\n"
      ]
     },
