--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -35,7 +35,8 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader, random_split\n",
-    "from transformers import CLIPProcessor, CLIPModel, CLIPVisionModel, logging\n",
+    "from transformers import CLIPProcessor, CLIPModel, AutoProcessor, CLIPVisionModel, logging\n",
+    "import clip\n",
     "from peft import LoraConfig, get_peft_model, TaskType\n",
     "from torchinfo import summary\n",
     "from tqdm.autonotebook import tqdm\n",
@@ -44,7 +45,14 @@
     "import numpy as np\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import json\n",
-    "import warnings"
+    "import warnings\n",
+    "import torch.nn.functional as F\n",
+    "from PIL import Image\n",
+    "import os\n",
+    "from datasets import load_dataset\n",
+    "import io\n",
+    "from torchvision.datasets import Flowers102\n",
+    "from torch.utils.data import DataLoader"
    ]
   },
   {
@@ -54,14 +62,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 降噪：避免 tokenizers 在多工情境下噴警告\n",
+    "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
+    "\n",
     "# some settings\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "MODEL_ID = \"openai/clip-vit-large-patch14\" # pre-trained CLIP model (ViT-L/14)\n",
-    "BATCH_SIZE = 1 # adjust based on your GPU memory\n",
+    "BATCH_SIZE = 64 # adjust based on your GPU memory\n",
+    "NUM_WORKERS = 2\n",
     "gradient_accumulation_steps = 1 # adjust based on your GPU memory\n",
     "# For Linear Probe & LoRA\n",
     "NUM_EPOCHS = 1\n",
-    "print(f\"Using device: {DEVICE}\")"
+    "print(f\"Using device: {DEVICE}\")\n",
+    "\n",
+    "\n",
+    "processor = CLIPProcessor.from_pretrained(MODEL_ID)\n",
+    "model     = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "model.eval()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -71,21 +90,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CLIP settings\n",
-    "# --- Load CLIP Processor ---\n",
-    "processor = CLIPProcessor.from_pretrained(MODEL_ID)\n",
-    "# --- Define a transform to process images for CLIP ---\n",
-    "class CLIPTransform:\n",
-    "    def __init__(self, processor):\n",
-    "        self.processor = processor\n",
+    "# ==== Flowers102 (torchvision) ====\n",
     "\n",
-    "    def __call__(self, image):\n",
-    "        # The processor expects a PIL image or list of images\n",
-    "        # It returns a dict, we extract 'pixel_values'\n",
-    "        # .squeeze(0) removes the batch dimension the processor adds\n",
-    "        return self.processor(images=image, return_tensors=\"pt\")[\"pixel_values\"].squeeze(0)\n",
     "\n",
-    "clip_transform = CLIPTransform(processor)"
+    "# 把 PIL 影像轉成 (3,224,224) 的 CLIP 規格 tensor\n",
+    "def clip_image_transform(image):\n",
+    "    if not isinstance(image, Image.Image):\n",
+    "        image = Image.fromarray(image)\n",
+    "    image = image.convert(\"RGB\")\n",
+    "    px = processor(images=image, return_tensors=\"pt\")[\"pixel_values\"][0]  # (3,224,224)\n",
+    "    return px\n",
+    "\n",
+    "flowers102_test_dts = Flowers102(\n",
+    "    root=\"./data\",\n",
+    "    split=\"test\",\n",
+    "    transform=clip_image_transform,\n",
+    "    download=True\n",
+    ")\n",
+    "print(f\"Total test samples (Flowers102): {len(flowers102_test_dts)}\")  # 6149\n",
+    "\n",
+    "flowers102_test_loader = DataLoader(\n",
+    "    flowers102_test_dts,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    shuffle=False,\n",
+    "    num_workers=NUM_WORKERS,\n",
+    "    pin_memory=True\n",
+    ")\n",
+    "\n",
+    "# 類別名稱（使用你上傳的 cat_to_name.json）\n",
+    "with open(\"./data/cat_to_name.json\", \"r\") as f:\n",
+    "    cat_to_name = json.load(f)\n",
+    "flowers102_class_names = [cat_to_name[str(i)] for i in range(1, 103)]\n"
    ]
   },
   {
@@ -95,40 +130,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataset related imports\n",
-    "from torchvision.datasets import Flowers102 \n",
-    "from datasets import load_dataset\n",
+    "# ==== CUB-200-2011 (HF datasets) ====\n",
     "\n",
-    "# --- Flowers102 ---\n",
-    "# prepare Flowers102 dataset\n",
-    "flowers102_test_dts = Flowers102(root=\"\", split=\"test\", transform=object) # evaluation on this set\n",
-    "# you should prepare the training set\n",
+    "birds_200 = load_dataset(\"bentrevett/caltech-ucsd-birds-200-2011\", cache_dir=\"./data\")\n",
+    "cub_bird_test_raw = birds_200[\"test\"]\n",
+    "print(f\"Total test samples (CUB): {len(cub_bird_test_raw)}\")  # 5794\n",
     "\n",
-    "print(f\"Total training samples: {len(flowers102_train_dts)}\")\n",
-    "print(f\"Total validation samples: {len(flowers102_val_dts)}\")\n",
-    "print(f\"Total test samples: {len(flowers102_test_dts)}\") # should be 6149\n",
+    "def _to_pil_image_safe(img):\n",
+    "    \"\"\"Robust convert HF dataset image (PIL/ndarray/list/bytes) -> PIL.Image.\"\"\"\n",
+    "    if isinstance(img, Image.Image):\n",
+    "        return img\n",
+    "    if isinstance(img, np.ndarray):\n",
+    "        return Image.fromarray(img)\n",
+    "    # list may be list-of-ints (bytes) or nested lists (HWC)\n",
+    "    if isinstance(img, (list, tuple)):\n",
+    "        # list of ints -> bytes\n",
+    "        if all(isinstance(x, (int, np.integer)) for x in img):\n",
+    "            return Image.open(io.BytesIO(bytes(img)))\n",
+    "        # else try to convert to array (may raise ValueError for ragged)\n",
+    "        try:\n",
+    "            arr = np.asarray(img, dtype=np.uint8)\n",
+    "            return Image.fromarray(arr)\n",
+    "        except Exception as ex:\n",
+    "            raise TypeError(f\"Cannot convert list image to PIL (ragged?): {ex}\") from ex\n",
+    "    if isinstance(img, (bytes, bytearray)):\n",
+    "        return Image.open(io.BytesIO(img))\n",
+    "    raise TypeError(f\"Unsupported image type for conversion to PIL: {type(img)}\")\n",
     "\n",
-    "# prepare class names for Flowers102\n",
-    "\"\"\"\n",
-    "...\n",
-    "\"\"\"\n",
+    "def cub_transform(example):\n",
+    "    \"\"\"\n",
+    "    Accept both single example and batch-dict (where example['image'] is a list).\n",
+    "    Return pixel_values as numpy arrays (C,H,W) to keep HF formatting/collate stable.\n",
+    "    \"\"\"\n",
+    "    def proc_one(img):\n",
+    "        pil = _to_pil_image_safe(img).convert(\"RGB\")\n",
+    "        px = processor(images=pil, return_tensors=\"pt\")[\"pixel_values\"][0]  # tensor (3,224,224)\n",
+    "        return px.numpy()\n",
     "\n",
-    "# --- CUB-200-2011 ---\n",
-    "birds_200 = load_dataset(\"bentrevett/caltech-ucsd-birds-200-2011\")\n",
-    "cub_bird_test_dts = birds_200[\"test\"]\n",
-    "# you should prepare the training set\n",
+    "    # batched call from datasets.formatting may pass lists\n",
+    "    if isinstance(example, dict) and isinstance(example.get(\"image\"), (list, tuple)):\n",
+    "        imgs = [proc_one(im) for im in example[\"image\"]]\n",
+    "        labs = list(example[\"label\"])\n",
+    "        return {\"pixel_values\": imgs, \"label\": labs}\n",
+    "    # single example\n",
+    "    img = example[\"image\"]\n",
+    "    px_arr = proc_one(img)\n",
+    "    return {\"pixel_values\": px_arr, \"label\": example[\"label\"]}\n",
     "\n",
-    "print(f\"Total training samples: {len(cub_bird_train_dts)}\")\n",
-    "print(f\"Total validation samples: {len(cub_bird_val_dts)}\")\n",
-    "print(f\"Total test samples: {len(cub_bird_test_dts)}\") # should be 5794\n",
+    "cub_bird_test_dts = cub_bird_test_raw.with_transform(cub_transform)\n",
     "\n",
-    "# prepare class names for CUB-200-2011\n",
-    "\"\"\"\n",
-    "...\n",
-    "\"\"\"\n",
+    "# 強韌的 collate：把所有樣本疊成 (B,3,224,224)，label 成 (B,)\n",
+    "def _to_chw224(x: torch.Tensor) -> torch.Tensor:\n",
+    "    x = torch.as_tensor(x)\n",
+    "    if not torch.is_floating_point(x):\n",
+    "        x = x.float() / 255.0\n",
+    "    if x.ndim == 3:\n",
+    "        # HWC -> CHW\n",
+    "        if x.shape[-1] == 3 and x.shape[0] != 3:\n",
+    "            x = x.permute(2, 0, 1)\n",
+    "        # 灰階擴通道\n",
+    "        if x.shape[0] == 1:\n",
+    "            x = x.repeat(3, 1, 1)\n",
+    "        elif x.shape[0] != 3:\n",
+    "            raise ValueError(f\"Unexpected channel dim: {x.shape}\")\n",
+    "    elif x.ndim == 2:\n",
+    "        x = x.unsqueeze(0).repeat(3, 1, 1)\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unexpected ndim {x.ndim} for image with shape {tuple(x.shape)}\")\n",
+    "    if x.shape[1:] != (224, 224):\n",
+    "        x = F.interpolate(x.unsqueeze(0).float(), size=(224, 224),\n",
+    "                          mode=\"bilinear\", align_corners=False).squeeze(0)\n",
+    "    return x.float()\n",
     "\n",
-    "# === Create DataLoaders ===\n",
-    "\n"
+    "def hf_collate_fn(batch):\n",
+    "    imgs = torch.stack([_to_chw224(b[\"pixel_values\"]) for b in batch], dim=0)  # (B,3,224,224)\n",
+    "    labs = torch.tensor([int(b[\"label\"]) for b in batch], dtype=torch.long)    # (B,)\n",
+    "    return {\"pixel_values\": imgs, \"label\": labs}\n",
+    "\n",
+    "from torch.utils.data import DataLoader\n",
+    "cub_bird_test_loader = DataLoader(\n",
+    "    cub_bird_test_dts,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    shuffle=False,\n",
+    "    num_workers=NUM_WORKERS,\n",
+    "    pin_memory=True,\n",
+    "    collate_fn=hf_collate_fn\n",
+    ")\n",
+    "\n",
+    "# 類別名稱由 HF features 提供\n",
+    "cub_bird_class_names = cub_bird_test_raw.features[\"label\"].names\n",
+    "\n",
+    "import re\n",
+    "def clean_cub_name(name: str) -> str:\n",
+    "    name = re.sub(r'^\\d+\\.', '', name)   # remove leading numeric prefix\n",
+    "    name = name.replace('_', ' ')\n",
+    "    return name.strip()\n",
+    "\n",
+    "cub_bird_class_names = [clean_cub_name(n) for n in cub_bird_class_names]\n",
+    "for x in cub_bird_class_names[:10]:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d909324e",
+   "metadata": {},
+   "source": [
+    "Start Linear Probing"
    ]
   },
   {
@@ -241,13 +349,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llava_train",
+   "display_name": "clip",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.16"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
